compiler/src/compile/snapshots/compiler__compile__type_visitor__test__symtab_success_snapshot_tests@struct_constructor_success.tapir.snap
---
source: compiler/src/compile/type_visitor.rs
expression: all_types
input_file: compiler/src/compile/snapshot_tests/type_visitor/struct_constructor_success.tapir
---
[
  ("p", Struct(StructId(0))),
  ("p2", Struct(StructId(0))),
]
